tests/NormalTests/paczka1/small_fuzzy/89275884.err
Error in line 2: mEgtkYmOZb A944 65,5
Error in line 5: vX5s2su A180 14,8
